# RampForge

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_ROADMAP_v1.0.0.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PR_DESCRIPTION.md  PR_PHASE1_COMPLETE.md  PR_PHASE1_SECURITY.md  QUICK_START_PL.md  README.md  setup.bat  setup.sh  start_backend.bat  start_backend.sh  start_client.bat  start_client.sh
backend/: .env.example  .env.production  MIGRATION_GUIDE.md  pyproject.toml  run.py  test_websocket_client.py
backend/app/: main.py  seed.py
backend/app/api/: assignments.py  audit.py  auth.py  dependencies.py  loads.py  ramps.py  statuses.py  users.py  websocket.py
backend/app/core/: bcrypt_compat.py  config.py  logging.py  security.py
backend/app/db/: base.py  migrations.py  models.py  session.py
backend/app/schemas/: assignment.py  audit.py  load.py  ramp.py  status.py  user.py
backend/app/services/: audit.py
backend/app/ws/: manager.py  schemas.py
backend/tests/: conftest.py  test_assignments.py  test_auth.py  test_bcrypt_compat.py  test_ramps.py  test_users.py  test_websocket.py
client_tui/: README_CLIENT_SETUP.md  START_CLIENT_UNIX.sh  START_CLIENT_WINDOWS.bat  build.bat  build.sh  dcdock.spec  pyproject.toml  run.py
client_tui/app/: __init__.py  main.py
client_tui/app/core/: __init__.py  logging.py
client_tui/app/screens/: __init__.py  board.py  dock_dashboard.py  enhanced_dashboard.py  login.py  ramp_grid_screen.py
client_tui/app/services/: __init__.py  api_client.py  ramp_status.py  websocket_client.py
client_tui/app/widgets/: __init__.py  filter_sidebar.py  ramp_detail_panel.py  ramp_tile.py  stats_panel.py
client_tui/app/widgets/modals/: __init__.py  create_assignment_modal.py  edit_assignment_modal.py
client_tui/dcdock_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
client_tui/tests/: conftest.py  test_api_client.py  test_websocket_client.py
deployment/: install_vps.sh
docker/: .env.example  docker-compose.yml  init.sql
docker/backend/: Dockerfile
docs/: CLAUDE.md  DATABASE_SCHEMA.md  PRODUCTION.md  PR_DESCRIPTION_v1.0.0.md  QUICK_START_PL.md  TROUBLESHOOTING.md  UI_UX_IMPROVEMENTS.md  WEBSOCKET.md  github-actions-test.yml.example
