[project]
name = "dcdock-tui"
version = "0.1.0"
description = "Dock Scheduling TUI Client"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "pydantic>=2.5.3",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-mock>=3.12.0",
    "textual-dev>=1.4.0",
    "ruff>=0.1.14",
    "black>=24.1.1",
    "mypy>=1.8.0",
]
build = [
    "pyinstaller>=6.3.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
dcdock = "app.main:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
